--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 ####################################
 #
 title: Limjihyeon
-email:
+email:hyeon3713@naver.com
 description: IT를 배우고 있는 사람입니다.
 url: # the base hostname & protocol for your site
 keywords: ["blog", "jekyll"]
