--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ kramdown:
 #
 owner:
   name: Limjihyeon
-  avatar: leonids-logo.png
-  job: "A jekyll theme"
-  bio: "A simple and awesome blog theme powered by jekyll."
-  email:
+  avatar: computer.png
+  job: "ITLearner"
+  bio: "IT를 배우고 있는 사람입니다."
+  email:hyeon3713@naver.com
   disqus-shortname:
   twitter: #username
   facebook: #username
