--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site wide configuration
 ####################################
 #
-title: Limjihyeon
+title: Limjihyeon123
 email:hyeon3713@naver.com
 description: IT를 배우고 있는 사람입니다.
 url: # the base hostname & protocol for your site
@@ -33,7 +33,7 @@ kramdown:
 ####################################
 #
 owner:
-  name: Limjihyeon
+  name: Limjihyeon456
   avatar: computer.png
   job: "ITLearner"
   bio: "IT를 배우고 있는 사람입니다."
