--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ keywords: ["blog", "jekyll"]
 # Jekyll configuration
 ####################################
 #
+show_downloads: true
 timezone:          Asia/Seoul
 markdown:          kramdown
 highlighter:       rouge
